White Space added to div styling - fixed format issue with portfolio

--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -16,3 +16,7 @@
     object-fit: cover;
     object-position: top;
 }
+
+div {
+  white-space: pre-wrap;
+}
